# cpp_cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
python/: logger.py
src/: CMakeLists.txt  main.cpp
